force-app/main/default/objects/SOW_Line_Item__c/SOW_Line_Item__c.object-meta.xml
<CustomObject>
    <label>SOW Line Item</label>
    <nameField>
        <displayFormat>SLI-{0000}</displayFormat>
        <label>SOW Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOW Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>