force-app/main/default/objects/SOW_Line_Item__c/fields/Deliverable_Title__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Title__c</fullName>
    <label>Deliverable Title</label>
    <type>Text</type>
    <length>255</length>
</CustomField>