force-app/main/default/objects/SOW_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SOW Line Items</relationshipLabel>
    <relationshipName>SOW_Line_Items</relationshipName>
</CustomField>