force-app/main/default/objects/SOW_Line_Item__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <label>Quote Line Item</label>
    <type>Lookup</type>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>SOW Line Items</relationshipLabel>
    <relationshipName>SOW_Line_Items</relationshipName>
</CustomField>